--- a/index.html
+++ b/index.html
@@ -98,11 +98,6 @@
                                    class="w-64 px-4 py-2 pl-10 text-sm border rounded-md transition-all duration-300 focus:outline-none focus:ring-2 focus:ring-offset-2">
                             <i data-lucide="search" class="absolute left-3 top-2.5 w-4 h-4 transition-colors duration-300"></i>
                         </div>
-                        <button id="addTaskBtn" 
-                                class="inline-flex items-center px-4 py-2 text-white text-sm font-medium rounded-md transition-all duration-300 hover:scale-105 focus:outline-none focus:ring-2 focus:ring-offset-2">
-                            <i data-lucide="plus" class="w-4 h-4 mr-2"></i>
-                            Add Task
-                        </button>
                     </div>
                 </div>
             </header>
@@ -143,9 +138,10 @@
                                 </select>
                             </div>
                             <div>
-                                <label class="block text-sm font-medium mb-1 transition-colors duration-300">Assignee</label>
+                                <label class="block text-sm font-medium mb-1 transition-colors duration-300">Assigned</label>
                                 <select id="taskAssignee" 
-                                        class="w-full px-3 py-2 border rounded-md transition-all duration-300 focus:outline-none focus:ring-2 focus:ring-offset-2">
+                                        class="w-full px-3 py-2 border rounded-md transition-all duration-300 focus:outline-none focus:ring-2 focus:ring-offset-2 bg-white">
+                                    <option value="">Select Team Member</option>
                                 </select>
                             </div>
                         </div>
